NetBSD Problem Report #49472

From martin@duskware.de  Mon Dec 15 20:31:43 2014
Return-Path: <martin@duskware.de>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	(using TLSv1.2 with cipher ECDHE-RSA-AES256-GCM-SHA384 (256/256 bits))
	(Client CN "mail.netbsd.org", Issuer "Postmaster NetBSD.org" (verified OK))
	by mollari.NetBSD.org (Postfix) with ESMTPS id E203BA567D
	for <gnats-bugs@gnats.NetBSD.org>; Mon, 15 Dec 2014 20:31:42 +0000 (UTC)
From: martin@NetBSD.org
Reply-To: martin@NetBSD.org
To: gnats-bugs@NetBSD.org
Subject: iee(4) multicast filter issue
X-Send-Pr-Version: 3.95

>Number:         49472
>Category:       kern
>Synopsis:       iee(4) multicast filter issue
>Confidential:   no
>Severity:       non-critical
>Priority:       medium
>Responsible:    kern-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Mon Dec 15 20:35:00 +0000 2014
>Closed-Date:    Sat Feb 21 11:41:09 +0000 2015
>Last-Modified:  Sat Feb 21 19:30:01 +0000 2015
>Originator:     Martin Husemann
>Release:        NetBSD 7.99.3
>Organization:
The NetBSD Foundation, Inc.
>Environment:
System: NetBSD moondance.duskware.de 7.99.3 NetBSD 7.99.3 (GENERIC) #9: Mon Dec 15 12:18:37 CET 2014 martin@night-owl.duskware.de:/usr/src/sys/arch/hppa/compile/GENERIC hppa
Architecture: hppa
Machine: hppa
>Description:

The iee(4) network driver seems to have trouble receiving multicast frames,
e.g. typical RAs for IPv6.

>How-To-Repeat:

E.g. on a hppa 715/50 machine:
dhcpcd -dB6T --nodhcp6 iee0

or on another machine:

ping6 ff02::1
and note the missing answer from the iee0 machine

>Fix:
n/a

>Release-Note:

>Audit-Trail:
From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49472 CVS commit: src/sys/dev/ic
Date: Sat, 21 Feb 2015 11:39:05 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Feb 21 11:39:05 UTC 2015

 Modified Files:
 	src/sys/dev/ic: i82596.c

 Log Message:
 Fix multicast handling (and while there a bogus memcpy).
 Fixes PR kern/49472, patch from Nick Hudson.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.32 src/sys/dev/ic/i82596.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: open->closed
State-Changed-By: martin@NetBSD.org
State-Changed-When: Sat, 21 Feb 2015 11:41:09 +0000
State-Changed-Why:
Fixed


From: "Martin Husemann" <martin@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/49472 CVS commit: [netbsd-7] src/sys/dev/ic
Date: Sat, 21 Feb 2015 19:27:50 +0000

 Module Name:	src
 Committed By:	martin
 Date:		Sat Feb 21 19:27:50 UTC 2015

 Modified Files:
 	src/sys/dev/ic [netbsd-7]: i82596.c

 Log Message:
 Pull up following revision(s) (requested by skrll in ticket #540):
 	sys/dev/ic/i82596.c: revision 1.32
 Fix multicast handling.
 Fixes PR kern/49472, patch from Nick Hudson.


 To generate a diff of this commit:
 cvs rdiff -u -r1.31 -r1.31.4.1 src/sys/dev/ic/i82596.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2014 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.